Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18318

CMake: server mode doesn't handle cmake errors

XMLWordPrintable

      Qt Creator 4.3 when run with CMake 3.7.2 using server mode is not handling CMake errors.

      Given the following CMake project:

      project(oh-my!)
      
      cmake_minimum_required(VERSION 3.2)
      
      message(FATAL_ERROR "This message should popup in the issues list!")
      

      The line with message should have an error icon next to it and in the Issues list there should be the text This message should popup in the issues list!

      Qt Creator 4.3 with CMake 3.5 does handle the CMake errors as expected.

      Screenshots here: http://imgur.com/a/yYlei (for some reason attaching screenshots to this ticket results in "JIRA could not attach the file as there was a missing token. Please try attaching the file again.")

        For Gerrit Dashboard: QTCREATORBUG-18318
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes